<resources>
    <string name="app_name">Desafio04</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember">Remember</string>
    <string name="btn_log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="email_example">dh@digitalhouse.com</string>
    <string name="email">Email</string>
    <string name="pwd_example">*********</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_example">DigitalHouse Brasil</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="btn_register">CREATE ACCOUNT</string>
    <string name="search">Search Games</string>
    <string name="year_input">Created at</string>
    <string name="description">Description</string>
    <string name="btn_add_game">SAVE GAME</string>
    <string name="release">Lançamento: %1$s</string>
</resources>