<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <include layout="@layout/activity_splash" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llInfoAdd"
        app:layout_constraintBottom_toBottomOf="@+id/llInfoAdd"
        android:layout_marginBottom="450dp"
        android:backgroundTint="@color/light_red"
        app:cardCornerRadius="50dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/llInfoAdd"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/pill_shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/light_grey"
            app:hintTextColor="@color/light_grey"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/light_grey">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/light_grey"
            app:hintTextColor="@color/light_grey"
            app:placeholderTextColor="@color/light_green"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/light_grey">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year_input"
                android:inputType="number"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="top"
            android:gravity="top"
            android:textColorHint="@color/light_grey"
            app:hintTextColor="@color/light_grey"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/light_grey">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:hint="@string/description"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddGame"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn_add_game"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:backgroundTint="@color/light_red"
            app:cornerRadius="3dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>