<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="450dp"
        app:cardCornerRadius="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_red"
        app:layout_constraintBottom_toBottomOf="@+id/llInfoAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llInfoAdd">
        <androidx.cardview.widget.CardView
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/light_red"
            app:cardCornerRadius="47dp"
            app:cardElevation="0dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_photo" />
            <ImageView
                android:id="@+id/ivGame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llInfoAdd"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/pill_shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/light_grey"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/light_grey"
            app:hintTextColor="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:textColor="@color/black"
                app:boxBackgroundColor="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/light_grey"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/light_grey"
            app:hintTextColor="@color/light_grey"
            app:placeholderTextColor="@color/light_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/year_input"
                android:inputType="number"
                android:textColor="@color/black"
                app:boxBackgroundColor="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:textColorHint="@color/light_grey"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/light_grey"
            app:hintTextColor="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/description"
                android:textColor="@color/black"
                app:boxBackgroundColor="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddGame"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/light_red"
            android:text="@string/btn_add_game"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="3dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>